--- a/app/views/daily_quotes/show.html.erb
+++ b/app/views/daily_quotes/show.html.erb
@@ -1,14 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Show date:</b>
-  <%= @daily_quote.show_date %>
-</p>
-
-<p>
-  <b>Quote:</b>
+<span class='date effect'>
+  <%= Date.today %>
+</span>
+<br/>
+<span class='quotes'>
   <%= @daily_quote.quote %>
-</p>
+</span>
 
 
 <%= link_to 'Edit', edit_daily_quote_path(@daily_quote) %> |
