wrapped everything on show page in a container

--- a/app/views/daily_quotes/show.html.erb
+++ b/app/views/daily_quotes/show.html.erb
@@ -1,9 +1,11 @@
-<p id="notice"><%= notice %></p>
+<div class='container'>
+	<span class='date effect'>
+	  <%= Date.today %>
+	</span>
+	<br/>
+	<span class='quotes'>
+	  <%= @daily_quote.quote %>
+	</span>
+</div>
 
-<span class='date effect'>
-  <%= Date.today %>
-</span>
-<br/>
-<span class='quotes'>
-  <%= @daily_quote.quote %>
-</span>
+
