--- a/app/views/daily_quotes/show.html.erb
+++ b/app/views/daily_quotes/show.html.erb
@@ -1,101 +1,24 @@
-<div class='container'>
-	<div class='row-fluid'>
-		<div class='span12'>
-			<span class='date effect'>
-			  <%= Date.today %>
-			</span>
-			<br/>
-			<span class='quotes'>
-			  <%= @daily_quote.quote %>
-			</span>
-		</div>
+<div class='row-fluid'>
+	<div class='span3'>
+		<span class='date effect'>
+		  <%= Date.today %>
+		</span>
 	</div>
-	<div class='summary span10 offset1'>
-		<div class='row-fluid summary-row'>
-			<div class='span2'>
-				Dec 1
-			</div>
-			<div class='span2'>
-				Dec 2
-			</div>
-			<div class='span2'>
-				Dec 3
-			</div>
-			<div class='span2'>
-				Dec 4
-			</div>
-			<div class='span2'>
-				Dec 5
-			</div>
-		</div>
-		<div class='row-fluid summary-row'>
-			<div class='span2'>
-				Dec 6
-			</div>
-			<div class='span2'>
-				Dec 7
-			</div>
-			<div class='span2'>
-				Dec 8
-			</div>
-			<div class='span2'>
-				Dec 9
-			</div>
-			<div class='span2'>
-				Dec 10
-			</div>
-		</div>
-		<div class='row-fluid summary-row'>
-			<div class='span2'>
-				Dec 11
-			</div>
-			<div class='span2'>
-				Dec 12
-			</div>
-			<div class='span2'>
-				Dec 13
-			</div>
-			<div class='span2'>
-				Dec 14
-			</div>
-			<div class='span2'>
-				Dec 15
-			</div>
-		</div>
-		<div class='row-fluid summary-row'>
-			<div class='span2'>
-				Dec 16
-			</div>
-			<div class='span2'>
-				Dec 17
-			</div>
-			<div class='span2'>
-				Dec 18
-			</div>
-			<div class='span2'>
-				Dec 19
-			</div>
-			<div class='span2'>
-				Dec 20
-			</div>
-		</div>
-		<div class='row-fluid summary-row'>
-			<div class='span2'>
-				Dec 21
-			</div>
-			<div class='span2'>
-				Dec 22
-			</div>
-			<div class='span2'>
-				Dec 23
-			</div>
-			<div class='span2'>
-				Dec 24
-			</div>
-			<div class='span2'>
-				Dec 25
-			</div>
-		</div>
+	<div class='span9'>
+		<span class= 'past-dates pull-right'>
+			<strong>Previous quotes: </strong>
+			<% @quotes.each do |quote| %> | 
+				<%= link_to quote.show_date, '#' %>
+			<% end %>
+		</span>
+	</div>
+</div>
+
+<div class='row-fluid'>
+	<div class='span12'>
+		<span class='quotes'>
+		  <%= @daily_quote.quote %>
+		</span>
 	</div>
 </div>
 
