--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
 	<link href="http://fonts.googleapis.com/css?family=Abel" rel="stylesheet" type="text/css">
 </head>
 <body>
-
-<%= yield %>
-
+	<div class='container'>
+		<%= yield %>
+	</div>
 </body>
 </html>
