--- a/app/views/daily_quotes/show.html.erb
+++ b/app/views/daily_quotes/show.html.erb
@@ -1,15 +1,7 @@
 <div class='row-fluid'>
-	<div class='span3'>
+	<div class='span12'>
 		<span class='date effect'>
 		  <%= Date.today %>
-		</span>
-	</div>
-	<div class='span9'>
-		<span class= 'past-dates pull-right'>
-			<strong>Previous quotes: </strong>|
-			<% @quotes.each do |quote| %> 
-				<%= link_to quote.show_date, '#' %> |
-			<% end %>
 		</span>
 	</div>
 </div>
@@ -18,6 +10,19 @@
 	<div class='span12'>
 		<span class='quotes'>
 		  <%= @daily_quote.quote %>
+		</span>
+	</div>
+</div>
+
+<div class='spacer'></div>
+
+<div class='row-fluid'>
+	<div class='span12'>
+		<span class= 'past-dates'>
+			<strong>Previous quotes: <br/></strong>|
+			<% @quotes.each do |quote| %> 
+				<%= link_to quote.show_date, '#' %> |
+			<% end %>
 		</span>
 	</div>
 </div>
