modified method calls and added footer. Added index view and modified show view. Added quote nav to application template

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,12 +39,14 @@ span {
 .date {
 	font-size: 55px;
 	line-height: 85px;
+	font-weight: bold;
 }
 
 .past-dates {
 	font-size: 20px;
 	line-height: 30px;
 	background: none;
+	margin-bottom: 30px;
 }
 
 .effect{
@@ -54,6 +56,39 @@ span {
 
 .spacer {
 	height: 70px;
+}
+
+/* Sticky footer styles -------------------------------------------------- */
+
+html,
+body {
+  height: 100%;
+  /* The html and body elements cannot have any padding or margin. */
+}
+
+/* Wrapper for page content to push down footer */
+#wrap {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  /* Negative indent footer by it's height */
+  margin: 0 auto -60px;
+}
+
+/* Set the fixed height of the footer here */
+#push,
+#footer {
+  height: 60px;
+}
+
+/* Lastly, apply responsive CSS fixes as necessary */
+@media (max-width: 767px) {
+  #footer {
+    margin-left: -20px;
+    margin-right: -20px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 
 
