--- a/app/views/daily_quotes/show.html.erb
+++ b/app/views/daily_quotes/show.html.erb
@@ -1,7 +1,7 @@
 <div class='row-fluid'>
 	<div class='span12'>
 		<span class='date effect'>
-		  <%= Date.today %>
+		  Quote for December <%= @daily_quote.show_date %>
 		</span>
 	</div>
 </div>
@@ -16,15 +16,6 @@
 
 <div class='spacer'></div>
 
-<div class='row-fluid'>
-	<div class='span12'>
-		<span class= 'past-dates'>
-			<strong>Previous quotes: <br/></strong>|
-			<% @quotes.each do |quote| %> 
-				<%= link_to quote.show_date, '#' %> |
-			<% end %>
-		</span>
-	</div>
-</div>
+
 
 
