--- a/app/views/daily_quotes/show.html.erb
+++ b/app/views/daily_quotes/show.html.erb
@@ -5,11 +5,11 @@
 		</span>
 	</div>
 </div>
-
+<br/><br/>
 <div class='row-fluid'>
 	<div class='span12'>
 		<span class='quotes'>
-		  <%= @daily_quote.quote %>
+		  <%= @daily_quote.quote.html_safe %>
 		</span>
 	</div>
 </div>
