--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,23 +12,29 @@
 	<div id="wrap">
 		<div class='container'>
 			<%= yield %>
-			<div class='row-fluid'>
-				<div class='span12'>
-					<span class= 'past-dates'>
-						<strong>Previous quotes: <br/></strong>|
-						<% @quotes.each do |quote| %> 
-							<%= link_to quote.show_date, daily_quote_path(quote) %> |
-						<% end %>
-					</span>
-					<br/>
-				</div>
-			</div>
+			
 		</div>
 		<div id="push"></div>
 	</div>
 	<div id="footer">
 	  <div class="container">
-	    <p class="muted credit">Built by James Stubblefield. Follow me on Twitter <a href="http://twitter.com/jameswilliamiii">@jameswilliamiii</a>.</p>
+			<div class='row-fluid'>
+				<div class='span12'>
+					<% if @quotes.present? %>
+						<span class= 'past-dates'>
+							<strong>Previous quotes: <br/></strong>|
+							<% @quotes.each do |quote| %> 
+								<%= link_to quote.show_date, daily_quote_path(quote) %> |
+							<% end %>
+						</span>
+					<% end %>
+				</div>
+			</div>
+			<div class='row-fluid'>
+				<p class="muted credit credit">Built because I needed a daily laugh, and thought you could use one too. Follow me on Twitter
+					<a href="http://twitter.com/jameswilliamiii">@jameswilliamiii</a>.
+				</p>
+			</div>
 	  </div>
 	</div>
 </body>
