--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,9 +14,10 @@
  */
 
 body {
-	background-image:url(nlcv.jpg); 
-	background-repeat: no-repeat; 
-	background-size: 110%;
+	background-image:url(nlcv.jpg);
+	background-position: auto 100%; 
+	background-repeat:no-repeat; 
+	background-size: cover;
 	background-color: black;
 }
 
@@ -31,13 +32,13 @@ span {
 }
 
 .quotes {
-	font-size: 45px;
-	line-height: 65px;
+	font-size: 35px;
+	line-height: 55px;
 }
 
 .date {
-	font-size: 55px;
-	line-height: 85px;
+	font-size: 45px;
+	line-height: 75px;
 	font-weight: bold;
 }
 
@@ -76,13 +77,13 @@ body {
   height: auto !important;
   height: 100%;
   /* Negative indent footer by it's height */
-  margin: 0 auto -80px;
+  margin: 0 auto -100px;
 }
 
 /* Set the fixed height of the footer here */
 #push,
 #footer {
-  height: 80px;
+  height: 100px;
 }
 
 /* Lastly, apply responsive CSS fixes as necessary */
