--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GriswoldAdvent</title>
+  <title>Griswold Advent <%= 'Dec' if Date.today.month == 12 %> <%= Date.today.day if Date.today.month == 12 %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -31,7 +31,7 @@
 				</div>
 			</div>
 			<div class='row-fluid'>
-				<p class="muted credit credit">Built because I needed a daily laugh, and thought you could use one too. Follow me on Twitter
+				<p class="muted credit credit">Built because I needed a daily laugh during the holidays, and thought you could use one too. Follow me on Twitter
 					<a href="http://twitter.com/jameswilliamiii">@jameswilliamiii</a>.
 				</p>
 			</div>
