--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,12 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:title" content="Griswold Advent" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="http://griswoldadvent.herokuapp.com/" />
+	<meta property="og:image" content="https://twimg0-a.akamaihd.net/profile_images/2905596826/13ddd6febad60066809fecd4dfb9ce3c.jpeg" />
+	<meta property="og:site_name" content="Griswold Advent" />
+	<meta property="fb:admins" content="749235035" />
 	<link href="http://fonts.googleapis.com/css?family=Abel" rel="stylesheet" type="text/css">
 </head>
 <body>
