updated social links to use actual quote in tweet, added new specific button for coming soon page, changed text on coming_soon page.

--- a/app/views/daily_quotes/coming_soon.html.erb
+++ b/app/views/daily_quotes/coming_soon.html.erb
@@ -2,12 +2,16 @@
 	<div class='span12'>
 		<p>
 			<span class='date effect'>
-		  	Starting Dec 1 we will be posting a new quote from America's favorite Christmas movie, National Lampoons Christmas Vacation.
+		  	Starting Dec 1 we will be posting a new quote each day from America's favorite Christmas movie, National Lampoons Christmas Vacation.
 			</span>
 		</p>
 	</div>
 </div>
 <div class='spacer'>
-	<%= render 'social_media' %>
+	<ul class='social'>
+		<li class='social'>
+			<a href="https://twitter.com/share" class="twitter-share-button" data-text="Starting Dec 1 we will be posting a new quote each day from National Lampoons Christmas Vacation. http://griswoldadvent.com" data-via="GriswoldAdvent">Tweet</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+		</li>
+	</ul>
 </div>
-
