--- a/app/views/daily_quotes/_social_media.html.erb
+++ b/app/views/daily_quotes/_social_media.html.erb
@@ -1,8 +1,7 @@
 
 	<ul class='social'>
 		<li class='social'>
-			<a href="https://twitter.com/share" class="twitter-share-button" data-text="<%= truncate(@daily_quote.quote.html_safe, :length => 98) %> http://griswoldadvent.com/daily_quotes/<%= @daily_quote.id %>" data-via="GriswoldAdvent">Tweet</a>
+			<a href="https://twitter.com/share" class="twitter-share-button" data-text="<%= truncate(strip_tags(@daily_quote.quote), :length => 98) %> http://griswoldadvent.com/daily_quotes/<%= @daily_quote.id %>" data-via="GriswoldAdvent">Tweet</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		</li>
 	</ul>
-114
