--- a/app/views/daily_quotes/coming_soon.html.erb
+++ b/app/views/daily_quotes/coming_soon.html.erb
@@ -10,7 +10,7 @@
 <div class='spacer'>
 	<ul class='social'>
 		<li class='social'>
-			<a href="https://twitter.com/share" class="twitter-share-button" data-text="Starting Dec 1 we will be posting a new quote each day from National Lampoons Christmas Vacation. http://griswoldadvent.com" data-via="GriswoldAdvent">Tweet</a>
+			<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://griswoldadvent.com" data-text="Starting Dec 1 we will be posting a new quote each day from National Lampoons Christmas Vacation." data-via="GriswoldAdvent">Tweet</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		</li>
 	</ul>
