--- a/app/views/daily_quotes/_social_media.html.erb
+++ b/app/views/daily_quotes/_social_media.html.erb
@@ -4,4 +4,17 @@
 			<a href="https://twitter.com/share" class="twitter-share-button" data-text="<%= truncate(strip_tags(@daily_quote.quote), :length => 98) %> http://griswoldadvent.com/daily_quotes/<%= @daily_quote.id %>" data-via="GriswoldAdvent">Tweet</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		</li>
+		<li class='social'>
+			<!-- Place this tag where you want the +1 button to render. -->
+			<div class="g-plusone" data-size="medium"></div>
+
+			<!-- Place this tag after the last +1 button tag. -->
+			<script type="text/javascript">
+			  (function() {
+			    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+			    po.src = 'https://apis.google.com/js/plusone.js';
+			    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+			  })();
+			</script>
+		</li>
 	</ul>
