--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,21 @@
 	
 	<div id="wrap">
 		<div class='container'>
+			<!-- Alert notices -->
+				<% if notice.present? %>
+				<div class="alert alert-success fade in">
+					<button class="close" data-dismiss="alert">X</button>
+					<%= notice %>
+				</div>
+				<% end %>
+				<% if alert.present? %>
+				<div class="alert alert-error fade in">
+					<button class="close" data-dismiss="alert">X</button>
+					<%= alert %>
+				</div>
+				<% end %>
+			<!-- End of Alert Notices -->
+			<%= render 'layouts/title' %>		
 			<%= yield %>
 		</div>
 		<div id="push"></div>
