--- a/app/views/daily_quotes/coming_soon.html.erb
+++ b/app/views/daily_quotes/coming_soon.html.erb
@@ -2,7 +2,7 @@
 	<div class='span12'>
 		<p>
 			<span class='date effect'>
-		  	Starting Dec 1 we will be posting a new quote each day from America's favorite Christmas movie, National Lampoons Christmas Vacation.
+		  	Starting Dec 1 we will be posting a new quote each day from America's favorite Christmas movie, National Lampoon's Christmas Vacation.
 			</span>
 		</p>
 	</div>
@@ -10,8 +10,11 @@
 <div class='spacer'>
 	<ul class='social'>
 		<li class='social'>
-			<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://griswoldadvent.com" data-text="Starting Dec 1 we will be posting a new quote each day from National Lampoons Christmas Vacation." data-via="GriswoldAdvent">Tweet</a>
+			<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://griswoldadvent.com" data-text="Starting Dec 1 we will be posting a new quote each day from National Lampoon's Christmas Vacation." data-via="GriswoldAdvent">Tweet</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+		</li>
+		<li class='social'>
+			<fb:like href="http://griswoldadvent.com/" send="false" layout="button_count" width="150" show_faces="false"></fb:like>
 		</li>
 	</ul>
 </div>
