--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,8 +13,8 @@
 			</div>
 		</div>
 		<div class='row-fluid'>
-			<p class="muted credit credit">Built because I needed a daily laugh during the holidays, and thought you could use one too. Follow me on Twitter
-				<a href="http://twitter.com/jameswilliamiii">@jameswilliamiii</a>.
+			<p class="muted credit credit">Built because I needed a daily laugh during the holidays, and thought you could use one too. If you enjoyed, please help out and donate to our
+				<a style='color:yellow'href="http://mycharitywater.org/griswoldadvent">charity:water campaign</a>.
 			</p>
 		</div>
   </div>
