updated controller for confirmation message and highlighted chrity water more on footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,11 @@
 <div id="footer">
   <div class="container">
 		<div class='row-fluid'>
+			<h3 class='charity-water'>If you enjoyed, please help out and donate to our
+				<a style='color:yellow'href="http://mycharitywater.org/griswoldadvent">charity:water campaign</a>.
+			</h3>
+		</div>
+		<div class='row-fluid'>
 			<div class='span12'>
 				<% if @quotes.present? %>
 					<span class= 'past-dates'>
@@ -11,11 +16,6 @@
 					</span>
 				<% end %>
 			</div>
-		</div>
-		<div class='row-fluid'>
-			<p class="muted credit credit">Built because I needed a daily laugh during the holidays, and thought you could use one too. If you enjoyed, please help out and donate to our
-				<a style='color:yellow'href="http://mycharitywater.org/griswoldadvent">charity:water campaign</a>.
-			</p>
 		</div>
   </div>
 </div>
