--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Griswold Advent <%= 'Dec' if Date.today.month == 12 %> <%= Date.today.day if Date.today.month == 12 %></title>
 	<!--[if lt IE 9]>
 	<script src="dist/html5shiv.js"></script>
+	<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
 	<![endif]-->
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
