--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,13 +20,13 @@
 		background-position: auto 100%; 
 		background-repeat:no-repeat; 
 		background-size: cover;
-		background-color: black;
+		background-color: #000000;
 		height: 100%;
 	}
 	
 	.sign-up {
 		font-family: 'Abel', sans-serif;
-		color: white;
+		color: #ffffff;
 		font-size: 18px;
 		line-height: 28px;
 		margin-top: 10px;
@@ -37,7 +37,7 @@
 
 @media (max-width: 767px) {
 	body {
-		background-color: black;;
+		background-color: black;
 	}
 	
 	.sign-up {
