background color changed to rgb for ie

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,7 +20,7 @@
 		background-position: auto 100%; 
 		background-repeat:no-repeat; 
 		background-size: cover;
-		background-color: #000000;
+		background-color: rgb(0, 0, 0);
 		height: 100%;
 	}
 	
