--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,11 +16,12 @@
 
 @media (min-width: 768px) {
 	body {
-		background-image:url(nlcv.jpg);
+		background:url(nlcv.jpg);
 		background-position: auto 100%; 
 		background-repeat:no-repeat; 
 		background-size: cover;
 		background-color: rgb(0, 0, 0);
+		color: #000000;
 		height: 100%;
 	}
 	
