--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -32,3 +32,13 @@
 
 @linkColor: @white;
 @linkColorHover: @blue;
+
+body {
+	background:url(nlcv.jpg);
+	background-position: auto 100%; 
+	background-repeat:no-repeat; 
+	background-size: cover;
+	background-color: rgb(0, 0, 0);
+	color: #000000;
+	height: 100%;
+}
