added root_path link to title

--- a/app/views/layouts/_title.html.erb
+++ b/app/views/layouts/_title.html.erb
@@ -1,6 +1,6 @@
 <div class='row-fluid'>
 	<div class='span6 griswold effect'>
-		<h1>The Griswold Advent</h1>
+		<h1><%= link_to "The Griswold Advent", root_path, :class => 'title' %></h1>
 	</div>
 	<div class='span6'>
 		<div class='sign-up'>
