added admin page to see number of people getting texts

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -157,5 +157,16 @@ body {
 	color: white;
 }
 
+a.signout {
+	color: yellow;
+}
+
+.admin {
+	font-family: 'Abel', sans-serif;
+	background: rgba(105, 93, 93, .5);
+	padding: 20px;
+	margin: 20px;
+}
+
 
 
