--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,6 +77,10 @@ a.title:hover {
 	text-decoration: none;
 }
 
+.twitter-follow-button {
+	margin-left: 20px;
+}
+
 .quotes {
 	font-size: 35px;
 	line-height: 55px;
