--- a/app/views/verifications/verified.xml.erb
+++ b/app/views/verifications/verified.xml.erb
@@ -1,3 +1,3 @@
 <Response>
-  <Sms>Thank you for verifying your number. Reply STOP at any time to be removed from the daily texts.</Sms>
+  <Sms>Thank you for verifying your number. Reply STOP at any time to be removed from the daily quotes. We hope you enjoy!</Sms>
 </Response>
